@@ -41,21 +41,27 @@
  */
 char *get_diskstat()
 {
-	char		*mtab, *dev, *fs, *type, *tmp = NULL;
-	FILE		*fp;
-	int		i = 0;
 	static char	buf[SS_BUFSIZE];
-	struct statfs	sfs;
+	char		*tmp = NULL;
 	char		tt[80];
+	struct statfs	sfs;
 	unsigned long	temp;
+#if defined(__linux__)
+        char            *mtab, *dev, *fs, *type;
+        FILE            *fp;
+        int             i = 0;
+#elif defined(__FreeBSD__) || (__NetBSD__)
+        struct statfs   *mntbuf;
+        long            mntsize;
+	int		i, j = 0;
+#endif
 
 	buf[0] = '\0';
+
+#if defined (__linux__)
+
 	mtab = calloc(PATH_MAX, sizeof(char));
-#ifdef __linux__
 	if ((fp = fopen((char *)"/etc/mtab", "r")) == 0) {
-#elif __FreeBSD__ || __NetBSD__
-	if ((fp = fopen((char *)"/etc/fstab", "r")) == 0) {
-#endif
 		sprintf(buf, "100:0;");
 		return buf;
 	}
@@ -89,6 +95,39 @@ char *get_diskstat()
 		sprintf(buf, "100:0;");
 	else
 		sprintf(buf, "100:%d%s;", i, tmp);
+
+#elif defined(__FreeBSD__) || (__NetBSD__)
+
+	mntsize = getmntinfo(&mntbuf, MNT_NOWAIT);
+
+	for (i = 0; i < mntsize; i++) {
+		if ((strncmp(mntbuf[i].f_fstypename, (char *)"kernfs", 6)) && (statfs(mntbuf[i].f_mntonname, &sfs) == 0)) {
+			if (tmp == NULL)
+				tmp = xstrcpy((char *)",");
+			else
+				tmp = xstrcat(tmp, (char *)",");
+			tt[0] = '\0';
+			temp = (unsigned long)(sfs.f_bsize / 512L);
+                                sprintf(tt, "%lu %lu %s %s",
+                                        (unsigned long)(sfs.f_blocks * temp) / 2048L,
+                                        (unsigned long)(sfs.f_bavail * temp) / 2048L,
+                                        mntbuf[i].f_mntonname, mntbuf[i].f_fstypename);
+                                tmp = xstrcat(tmp, tt);
+			j++;
+			if (j == 10)
+				break;
+		}
+	}
+        if (strlen(tmp) > (SS_BUFSIZE - 8))
+                sprintf(buf, "100:0;");
+        else
+		sprintf(buf, "100:%d%s;", j, tmp);
+#else
+	/*
+	 * Not supported, so return nothing usefull.
+	 */
+	sprintf(buf, "100:0;");
+#endif
 
 	return buf;
 }
